Corrected padding overflow on code blocks

--- a/css/api.css
+++ b/css/api.css
@@ -291,7 +291,7 @@ api-param
     border-radius: 7px;
     padding: 12px;
     letter-spacing: -0.5px;
-    width: 100%;
+    width: 98%;
     position: relative;
     overflow-wrap: break-word;
     text-overflow: clip;
